outputs/tsp_constructive-constructive/2025-09-19_23-18-06/evaluations/problem_eval8055156800445096998_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric combining degree centrality and betweenness centrality, and uses a dynamic penalty system that considers both distance and connectivity, while preserving the original's core structure of combining multiple heuristics.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric combining degree centrality and betweenness centrality, and uses a dynamic penalty system that considers both distance and connectivity, while preserving the original's core structure of combining multiple heuristics.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
